--- a/index.css
+++ b/index.css
@@ -1,3 +1,42 @@
-#heading{
+body {
+    margin: 0;
+    padding: 0;
+}
+
+#heading {
     color: green;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* border: 1px solid black; */
+    padding: 0 10px 0 10px;
+}
+
+.logo {
+    width: 150px;
+}
+
+.nav-items>ul {
+    display: flex;
+    list-style-type: none;
+    font-size: 20px;
+}
+
+.nav-items>ul>li {
+    padding: 10px;
+    margin: 10px;
+}
+
+.res-card {
+    width: 200px;
+    height: 300px;
+    border: 1px solid #000;
+    padding: 10px;
+}
+
+.search {
+    padding: 10px;
 }
