--- a/index.css
+++ b/index.css
@@ -56,9 +56,12 @@ body {
 
 .res-logo {
     width: 100%;
+    height: 200px;
+    object-fit: cover;
 }
 
 .res-heading-container {
+    margin-top: 10px;
     font-weight: 600;
     font-size: 1.5rem;
 }
@@ -88,13 +91,20 @@ body {
     margin-left: 5px;
 }
 
-.rating-img{
+.rating-img {
     width: 15px;
 }
 
-.res-container{
+.res-container {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+}
+
+.three-dots {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 100%;
 }
