--- a/index.css
+++ b/index.css
@@ -50,8 +50,8 @@ body {
     cursor: pointer;
 }
 
-.search {
-    padding: 10px;
+.sub-header {
+    margin: 10px 20px 30px 20px;
 }
 
 .res-logo {
@@ -107,4 +107,63 @@ body {
     white-space: nowrap;
     overflow: hidden;
     width: 100%;
+}
+
+.inputbox-container {
+    display: flex;
+    align-items: center;
+    border: 1px solid #000;
+    border-radius: 20px;
+    max-height: 3rem;
+}
+
+.inputbox-container-focus {
+    border: 1px solid #E01226;
+}
+
+.input-style {
+    width: 100%;
+    height: 2rem;
+    border-radius: 20px;
+    padding: 0px 10px 0px 10px;
+    font-size: 0.9rem;
+    border: none;
+    outline: none;
+}
+
+.inputbox-img-container {
+    /* background-color: red; */
+    margin: 5px 0px 0px 10px;
+}
+
+.inputbox-image {
+    width: 20px;
+}
+
+.dashboard-search-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.dashboard-input-container{
+    width: 40%;
+}
+
+.dashboard-filter-button{
+    height: 2rem;
+    border-radius: 20px;
+    background-color: #fff;
+    border: 1px solid #000;
+    color: #000;
+    padding: 0px 15px 0px 15px;
+    cursor: pointer;
+}
+
+.dashboard-filter-button-focus{
+    background-color: #E01226;
+    color: #f0f0f0;
+    border: none;
 }
