--- a/index.css
+++ b/index.css
@@ -148,11 +148,11 @@ body {
     flex-wrap: wrap;
 }
 
-.dashboard-input-container{
+.dashboard-input-container {
     width: 40%;
 }
 
-.dashboard-filter-button{
+.dashboard-filter-button {
     height: 2rem;
     border-radius: 20px;
     background-color: #fff;
@@ -162,8 +162,23 @@ body {
     cursor: pointer;
 }
 
-.dashboard-filter-button-focus{
+.dashboard-filter-button-focus {
     background-color: #E01226;
     color: #f0f0f0;
     border: none;
+}
+
+.shimmer-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.shimmer-subcontainer {
+    width: 200px;
+    height: 300px;
+    background-color: #f0f0f0;
+    border-radius: 15px;
+    margin: 10px;
 }
