--- a/index.css
+++ b/index.css
@@ -17,6 +17,10 @@ body {
     align-items: center;
     /* border: 1px solid black; */
     /* padding: 0 10px 0 10px; */
+    position: sticky;
+    top: 0;
+    background-color: #fff;
+    z-index: 3;
 }
 
 .logo {
@@ -58,6 +62,12 @@ body {
     width: 100%;
     height: 200px;
     object-fit: cover;
+    border-radius: 10px;
+    transition: all 0.4s;
+}
+
+.res-logo:hover {
+    transform: scale(0.98);
 }
 
 .res-heading-container {
@@ -192,7 +202,7 @@ body {
 }
 
 .error-image {
-    width: 600px;
+    width: 25%;
 }
 
 .header-li-element {
