--- a/index.css
+++ b/index.css
@@ -215,3 +215,8 @@ body {
     text-underline-offset: 5px;
     color: #E01226;
 }
+
+.about-container{
+    border: 1px solid #000;
+    padding: 10px;
+}
